Client View Change
Client View Change

--- a/KN_Order_Storage/Views/Client/Create.cshtml
+++ b/KN_Order_Storage/Views/Client/Create.cshtml
@@ -5,14 +5,14 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Create</h2>
+<h2>新增客户</h2>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>ct_client</h4>
+        @*<h4>客户</h4>*@
         <hr />
         @Html.ValidationSummary(true)
 
@@ -24,13 +24,13 @@
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.us_user_name, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.us_user_name)
                 @Html.ValidationMessageFor(model => model.us_user_name)
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             @Html.LabelFor(model => model.ct_create_time, new { @class = "control-label col-md-2" })
@@ -48,13 +48,13 @@
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.ct_status, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.ct_status)
                 @Html.ValidationMessageFor(model => model.ct_status)
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             @Html.LabelFor(model => model.ct_client_tel, new { @class = "control-label col-md-2" })
@@ -96,7 +96,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.ct_express, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.ct_express)
@@ -118,7 +118,7 @@
                 @Html.EditorFor(model => model.ct_address)
                 @Html.ValidationMessageFor(model => model.ct_address)
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             @Html.LabelFor(model => model.ct_remark, new { @class = "control-label col-md-2" })
@@ -130,12 +130,12 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="新增" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("返回列表", "Index")
 </div>
