--- a/KN_Order_Storage/Views/Client/Delete.cshtml
+++ b/KN_Order_Storage/Views/Client/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model KN_Order_Storage.ct_client
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "删除客户";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
