--- a/KN_Order_Storage/Views/Client/Edit.cshtml
+++ b/KN_Order_Storage/Views/Client/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model KN_Order_Storage.ct_client
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "编辑客户";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -20,7 +20,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ct_client_source, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ct_client_source)
+                @Html.DropDownListFor(model => model.ct_client_source, (List<SelectListItem>)ViewBag.Source, new { @class = "btn btn-default dropdown-toggle col-md-2" })
                 @Html.ValidationMessageFor(model => model.ct_client_source)
             </div>
         </div>
@@ -84,7 +84,11 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ct_reach_status, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ct_reach_status)
+                @Html.DropDownListFor(model => model.ct_reach_status, new List<SelectListItem> {
+                        new SelectListItem(){Text = "未到店", Value = "N"}
+                        , new SelectListItem(){Text = "到店", Value = "R"}
+                    }, new { @class = "btn btn-default dropdown-toggle col-md-2" })
+                
                 @Html.ValidationMessageFor(model => model.ct_reach_status)
             </div>
         </div>
@@ -92,7 +96,11 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ct_order_status, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ct_order_status)
+                @Html.DropDownListFor(model => model.ct_order_status, new List<SelectListItem> {
+                        new SelectListItem(){Text = "未下单", Value = "N"}
+                        , new SelectListItem(){Text = "下单", Value = "O"}
+                        , new SelectListItem(){Text = "结单", Value = "D"}
+                    }, new { @class = "btn btn-default dropdown-toggle col-md-2" })
                 @Html.ValidationMessageFor(model => model.ct_order_status)
             </div>
         </div>
