--- a/KN_Order_Storage/Views/Client/Details.cshtml
+++ b/KN_Order_Storage/Views/Client/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model KN_Order_Storage.ct_client
 
 @{
-	ViewBag.Title = "Details";
+	ViewBag.Title = "客户详情";
 	Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
