--- a/KN_Order_Storage/Views/Client/Index.cshtml
+++ b/KN_Order_Storage/Views/Client/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<KN_Order_Storage.ct_client>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "客户信息";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
