--- a/KN_Order_Storage/Views/Shared/_Layout.cshtml
+++ b/KN_Order_Storage/Views/Shared/_Layout.cshtml
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
+    @Styles.Render("~/Content/bootstrap-datepicker.css")
+    @Styles.Render("~/Content/bootstrap-datepicker.less")
     @Scripts.Render("~/bundles/modernizr")
 
 </head>
@@ -40,6 +42,7 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/Scripts/bootstrap-datepicker.js")
     @RenderSection("scripts", required: false)
 </body>
 </html>
