--- a/KN_Order_Storage/Views/Client/Index.cshtml
+++ b/KN_Order_Storage/Views/Client/Index.cshtml
@@ -11,7 +11,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <form class="navbar-form navbar-left" role="search">
             <div class="form-group">
-                @Html.DropDownList("ct_client_source", new List<SelectListItem> {
+                @Html.DropDownList("source", new List<SelectListItem> {
                         new SelectListItem(){Text = "所有", Value = WebConstants.SearchAll}
                         , new SelectListItem(){Text = "百度", Value = "1"}
                         , new SelectListItem(){Text = "大众", Value = "2"}
@@ -19,28 +19,28 @@
                         , new SelectListItem(){Text = "Wed114", Value = "4"}
                         , new SelectListItem(){Text = "其他", Value = "O"}
                     }, new { @class = "form-control btn btn-default dropdown-toggle", @style = "width: 10%" })
-                @Html.DropDownList("ct_reach_status", new List<SelectListItem> {
+                @Html.DropDownList("reachstatus", new List<SelectListItem> {
                         new SelectListItem(){Text = "所有", Value = WebConstants.SearchAll}
                         , new SelectListItem(){Text = "未到店", Value = WebConstants.ClientReachStatusN}
                         , new SelectListItem(){Text = "已到店", Value = WebConstants.ClientReachStatusR}
                     }, new { @class = "form-control btn btn-default dropdown-toggle", @style = "width: 10%" })
-                @Html.DropDownList("ct_order_status", new List<SelectListItem> {
+                @Html.DropDownList("orderstatus", new List<SelectListItem> {
                         new SelectListItem(){Text = "所有", Value = WebConstants.SearchAll}
                         , new SelectListItem(){Text = "未下单", Value = WebConstants.ClientOrderStatusN}
                         , new SelectListItem(){Text = "已下单", Value = WebConstants.ClientOrderStatusO}
                         , new SelectListItem(){Text = "已结单", Value = WebConstants.ClientOrderStatusD}
                     }, new { @class = "form-control btn btn-default dropdown-toggle", @style = "width: 10%" })
                 <label class="control-label">&nbsp;&nbsp;婚期</label>
-                <input data-provide="datepicker" class="form-control date" style="width: 10%" data-date-format="yyyy-mm-dd" id="dp1">
+                <input name="dp1" class="form-control" style="width: 10%" id="dp1">
                 <label class="control-label">至</label>
-                <input data-provide="datepicker" class="form-control date" style="width: 10%" data-date-format="yyyy-mm-dd" id="dp2">
+                <input name="dp2" class="form-control" style="width: 10%" id="dp2">
                 &nbsp;&nbsp;
                 @Html.DropDownList("criteria", new List<SelectListItem> {
                         new SelectListItem(){Text = "姓名", Value = "姓名"}
                         , new SelectListItem(){Text = "电话", Value = "电话"}
                         , new SelectListItem(){Text = "QQ", Value = "QQ"}
                     }, new { @class = "form-control btn btn-default dropdown-toggle", @style = "width: 10%" })
-                <input type="text" class="form-control" style="width: 15%" placeholder="输入查询条件">
+                <input name="term" type="text" class="form-control" style="width: 15%" placeholder="输入查询条件">
                 <button type="submit" class="btn btn-default">查询</button>
                 <div class="pull-right" style="height: 34px; padding: 6px 12px; vertical-align: middle; ">
                     @Html.ActionLink("新增客户", "Create")
@@ -49,10 +49,11 @@
         </form>
     </div>
 </nav>
-<script>
-
-    $(".date").datepicker();
-
+<script> 
+    $('#dp1').datepicker({
+        format: 'yyyy-mm-dd'
+    });
+    $('#dp2').datepicker();  
 </script>
 <table class="table">
     <tr>
