--- a/KN_Order_Storage/Views/Client/Index.cshtml
+++ b/KN_Order_Storage/Views/Client/Index.cshtml
@@ -36,9 +36,9 @@
                 <input name="dp2" class="form-control" style="width: 10%" id="dp2">
                 &nbsp;&nbsp;
                 @Html.DropDownList("criteria", new List<SelectListItem> {
-                        new SelectListItem(){Text = "姓名", Value = "姓名"}
-                        , new SelectListItem(){Text = "电话", Value = "电话"}
-                        , new SelectListItem(){Text = "QQ", Value = "QQ"}
+                        new SelectListItem(){Text = "姓名", Value = "name"}
+                        , new SelectListItem(){Text = "电话", Value = "tel"}
+                        , new SelectListItem(){Text = "QQ", Value = "qq"}
                     }, new { @class = "form-control btn btn-default dropdown-toggle", @style = "width: 10%" })
                 <input name="term" type="text" class="form-control" style="width: 15%" placeholder="输入查询条件">
                 <button type="submit" class="btn btn-default">查询</button>
